WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121439
Aligned argument signatures of setupArgumentsWithExecState are missing on MIPS.
https://bugs.webkit.org/show_bug.cgi?id=121439
Summary
Aligned argument signatures of setupArgumentsWithExecState are missing on MIPS.
Balazs Kilvady
Reported
2013-09-16 09:46:20 PDT
/data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h:1458:74: error: no matching function for call to 'JSC::DFG::JITCompiler::setupArgumentsWithExecState(JSC::DFG::SpeculativeJIT::TrustedImm32, JSC::DFG::FPRReg&, JSC::DFG::GPRReg&)' /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h:1564:80: error: no matching function for call to 'JSC::DFG::JITCompiler::setupArgumentsWithExecState(JSC::DFG::GPRReg&, JSC::DFG::GPRReg&, JSC::DFG::SpeculativeJIT::TrustedImm32, JSC::DFG::FPRReg&)'
Attachments
proposed patch.
(1.49 KB, patch)
2013-09-16 09:55 PDT
,
Balazs Kilvady
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kilvady
Comment 1
2013-09-16 09:55:06 PDT
Created
attachment 211806
[details]
proposed patch.
Geoffrey Garen
Comment 2
2013-09-16 10:31:41 PDT
Comment on
attachment 211806
[details]
proposed patch. r=me
WebKit Commit Bot
Comment 3
2013-09-16 10:55:13 PDT
Comment on
attachment 211806
[details]
proposed patch. Clearing flags on attachment: 211806 Committed
r155884
: <
http://trac.webkit.org/changeset/155884
>
WebKit Commit Bot
Comment 4
2013-09-16 10:55:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug